final-devops-project/kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: final-app
  labels:
    pod-security.kubernetes.io/enforce: restricted
