final-devops-project/kubernetes/05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: final-app
  namespace: final-app
  labels: {app: final-app}
spec:
  type: ClusterIP
  selector: {app: final-app}
  ports:
    - {name: http, port: 80, targetPort: http}
