final-devops-project/kubernetes/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: final-app
  namespace: final-app
  labels: {app: final-app}
spec:
  ingressClassName: nginx
  rules:
    - host: final-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: final-app
                port: {name: http}
